tests/ui/const-generics/issues/issue-100313.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/issue-100313.rs:16:5
   |
LL |     x.set_false();
   |     ^^^^^^^^^^^^^ writing to ALLOC0 which is read-only
   |
note: inside `T::<&true>::set_false`
  --> $DIR/issue-100313.rs:9:13
   |
LL |             *(B as *const bool as *mut bool) = false;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
